Implement view balance, transfer, account statement and reset password via ATM client

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ pip-log.txt
 /NetbankApplication/NetbankApplication-war/nbproject/private/
 /NetbankApplication/NetbankApplication-ejb/nbproject/private/
 /ATMClient/nbproject/private/
+/test/nbproject/private/
