--- a/NetbankApplication/nbproject/project.properties
+++ b/NetbankApplication/nbproject/project.properties
@@ -25,8 +25,7 @@ jar.content.additional=\
     ${reference.NetbankApplication-war.dist-ear}:\
     ${reference.NetbankApplication-ejb.dist-ear}:\
     ${reference.ATMClient.j2ee-module-car}:\
-    ${reference.ATMClient.dist}:\
-    ${reference.test.j2ee-module-car}
+    ${reference.ATMClient.dist}
 jar.name=NetbankApplication.ear
 javac.debug=true
 javac.deprecation=false
@@ -38,12 +37,10 @@ platform.active=default_platform
 project.ATMClient=../ATMClient
 project.NetbankApplication-ejb=NetbankApplication-ejb
 project.NetbankApplication-war=NetbankApplication-war
-project.test=../test
 reference.ATMClient.dist=${project.ATMClient}/dist/ATMClient.jar
 reference.ATMClient.j2ee-module-car=${project.ATMClient}/dist/ATMClient.jar
 reference.NetbankApplication-ejb.dist-ear=${project.NetbankApplication-ejb}/dist/NetbankApplication-ejb.jar
 reference.NetbankApplication-war.dist-ear=${project.NetbankApplication-war}/dist/NetbankApplication-war.war
-reference.test.j2ee-module-car=${project.test}/dist/test.jar
 resource.dir=setup
 run.classpath=
 source.root=.
