Deleted unnecessary files from research report.

--- a/NetbankApplication/nbproject/project.properties
+++ b/NetbankApplication/nbproject/project.properties
@@ -1,7 +1,8 @@
+app.client=ATMClient
 build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
 build.dir=build
 build.generated.dir=${build.dir}/generated
-client.module.uri=NetbankApplication-war
+client.module.uri=NetbankApplication/${app.client}
 client.urlPart=/faces/login.xhtml
 debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
@@ -22,7 +23,6 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
-    ${reference.NetbankApplication-war.dist-ear}:\
     ${reference.NetbankApplication-ejb.dist-ear}:\
     ${reference.ATMClient.j2ee-module-car}:\
     ${reference.ATMClient.dist}
@@ -36,11 +36,9 @@ no.dependencies=false
 platform.active=default_platform
 project.ATMClient=../ATMClient
 project.NetbankApplication-ejb=NetbankApplication-ejb
-project.NetbankApplication-war=NetbankApplication-war
 reference.ATMClient.dist=${project.ATMClient}/dist/ATMClient.jar
 reference.ATMClient.j2ee-module-car=${project.ATMClient}/dist/ATMClient.jar
 reference.NetbankApplication-ejb.dist-ear=${project.NetbankApplication-ejb}/dist/NetbankApplication-ejb.jar
-reference.NetbankApplication-war.dist-ear=${project.NetbankApplication-war}/dist/NetbankApplication-war.war
 resource.dir=setup
 run.classpath=
 source.root=.
